<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Register and sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_remember_me">Remember me</string>

    <string name="change_theme">Change Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_none">None</string>

    <string name="settings_TEST">Settings View</string>
    <string name="first_name">First name: </string>
    <string name="last_name">Last name: </string>
    <string name="email">Email: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="height">Height(ft): </string>
    <string name="starting_weight">Starting Weight(lbs): </string>
    <string name="goal_weight">Goal Weight(lbs): </string>
    <string name="age">Age: </string>
    <string name="gender">Gender: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_neutral">Prefer not to say</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="delete_profile">Delete Profile</string>

    <string name="DEMO_first">Michael</string>
    <string name="DEMO_last">Scarn</string>
    <string name="DEMO_email">ThreatLevel@Midnight.com</string>
    <string name="DEMO_number">555-555-5555</string>
    <string name="DEMO_height">5\'10"</string>
    <string name="DEMO_weight">Your starting weight</string>
    <string name="DEMO_age">48</string>


    <string name="home_TEST">Home View</string>
    <string name="profile_TEST">Profile View</string>

    <string name="notification_SMS">Turn on notifications</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="askAgain">Ask again later</string>
    <string name="allow">  Allow  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
