<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/prompt_username"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="110dp" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/textUsername"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="86dp" />

    <Switch
        android:id="@+id/switchRemember"
        android:layout_width="146dp"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/action_remember_me"
        app:layout_constraintRight_toRightOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:text="@string/action_sign_in_short"
        android:enabled="false"
        android:clickable="true"
        android:onClick="buttonClick"
        android:outlineSpotShadowColor="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/switchRemember" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:text="@string/action_sign_in"
        android:enabled="false"
        android:clickable="true"
        android:onClick="buttonClick"
        android:outlineSpotShadowColor="@color/purple_500"
        app:layout_constraintRight_toRightOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/switchRemember" />



</androidx.constraintlayout.widget.ConstraintLayout>